Add control panel functionality

--- a/src/app/components/icon-button/icon-button.component.html
+++ b/src/app/components/icon-button/icon-button.component.html
@@ -4,6 +4,8 @@
   mat-icon-button
   color="primary"
   attr.aria-label="{{ ariaLabel }}"
+  (click)="handleClick()"
+  [disabled]="disabled"
 >
   <mat-icon class="icon">{{ type }}</mat-icon>
 </button>
