--- a/src/app/components/player-volume-panel/player-volume-panel.component.html
+++ b/src/app/components/player-volume-panel/player-volume-panel.component.html
@@ -1,4 +1,4 @@
 <app-icon-button type="volume_up" ariaLabel="Volume" />
-<mat-slider class="slider">
+<mat-slider class="slider" discrete>
   <input matSliderThumb />
 </mat-slider>
