--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,7 @@ $light: rgb(0 0 0 / 30%);
 $lighter: rgb(198 198 198);
 
 $primary: rgb(255 230 162);
+$primary-25: rgb(255 230 162 / 25%);
 $secondary: rgb(223 68 68);
 
-$md: 600px;
+$md: 720px;
