--- a/src/app/components/audio-table/audio-table.component.html
+++ b/src/app/components/audio-table/audio-table.component.html
@@ -12,5 +12,11 @@
     <td mat-cell *matCellDef="let audio">{{ audio.filename }}</td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let myRowData; columns: displayedColumns"></tr>
+  <tr
+    class="row"
+    [class.row_active]="audioPlayer.currentTrack?.id === myRowData.id"
+    (click)="onRowClick(myRowData.id)"
+    mat-row
+    *matRowDef="let myRowData; columns: displayedColumns"
+  ></tr>
 </table>
