--- a/src/app/components/audio-table/audio-table.component.scss
+++ b/src/app/components/audio-table/audio-table.component.scss
@@ -12,6 +12,10 @@
   cursor: pointer;
 }
 
-.mat-mdc-row:hover .mat-mdc-cell {
+.row:hover {
   background-color: variables.$primary;
+}
+
+.row_active {
+  background-color: variables.$primary-25;
 }
