--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,3 +1,5 @@
+@use "./variables.scss";
+
 @mixin default-font() {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-weight: 400;
@@ -5,7 +7,7 @@
 }
 
 %container {
-  padding: 0 1.4286rem;
+  padding: 0 1.25rem;
 }
 
 %reset {
