--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,21 @@
   justify-content: center;
   padding: 1.25rem 0;
 }
+
+.main {
+  padding: 20px;
+}
+
+.status {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+
+.status-title {
+  font-size: 18px;
+}
+
+.divider {
+  padding: 10px 0;
+}
