--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@
 
 .main {
   padding: 20px;
+  position: relative;
 }
 
 .status {
@@ -16,8 +17,21 @@
 
 .status-title {
   font-size: 18px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
 
 .divider {
   padding: 10px 0;
+}
+
+.loading-shade {
+  position: absolute;
+  inset: 0;
+  background: rgb(0 0 0 / 15%);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
