--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,5 +1,12 @@
-<mat-form-field class="form">
-  <mat-label class="label">Search track</mat-label>
-  <input matInput class="input" />
-  <mat-icon matPrefix>search</mat-icon>
-</mat-form-field>
+<form>
+  <mat-form-field class="form">
+    <mat-label class="label">Search</mat-label>
+    <input
+      (input)="handleInputChange($event)"
+      matInput
+      class="input"
+      type="text"
+    />
+    <mat-icon matPrefix>search</mat-icon>
+  </mat-form-field>
+</form>
