Various improvements, add animations, bug fixing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,10 @@
     <mat-divider class="divider" />
     <app-search-bar (onSearch)="onSearch($event)" />
     <app-audio-table />
-    <app-player />
+    <div class="player">
+      <app-player
+        [@openClose]="audioPlayer.trackStatus !== 'idle' ? 'open' : 'closed'"
+      />
+    </div>
   </div>
 </app-layout>
