--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,29 +5,9 @@
 }
 
 .main {
-  padding: 20px;
+  padding: 1.25rem;
   position: relative;
-}
-
-.status {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 10px;
-}
-
-.status-title {
-  font-size: 18px;
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-
-.divider {
-  padding: 10px 0;
-}
-
-.player {
-  margin-top: 15px;
+  margin-bottom: 3.75rem;
 }
 
 .loading-shade {
@@ -38,4 +18,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.status {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 0.625rem;
+}
+
+.status-title {
+  font-size: 1.125rem;
+  display: flex;
+  align-items: center;
+  gap: 0.9375rem;
+}
+
+.divider {
+  padding: 0.625rem 0;
+}
+
+.player {
+  margin-top: 0.9375rem;
 }
